--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: ci
-
 on:
   pull_request:
     branches: [ main ]
-
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -19,6 +17,18 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
         
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          
+      - name: Download assets
+        run: |
+          mkdir -p src/assets
+          aws s3 sync s3://matthewcollett.ca/assets/ src/assets/
+          
       - name: Lint
         run: yarn lint
         
